--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ input[type="text"], input[type="number"] {
     margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 3px;
+    font-size: 16px;
 }
 
 button {
